--- a/index.html
+++ b/index.html
@@ -5,40 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Your Name | Fullstack Developer</title>
   <style>
+    /* Background gradient with subtle abstract shapes */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f4f4f4;
-      color: #333;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #eee;
+      min-height: 100vh;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    /* subtle moving shapes using CSS */
+    body::before, body::after {
+      content: "";
+      position: fixed;
+      top: -20%;
+      left: -10%;
+      width: 150vw;
+      height: 150vh;
+      background:
+        radial-gradient(circle at 20% 20%, rgba(255, 255, 255, 0.07), transparent 70%),
+        radial-gradient(circle at 80% 80%, rgba(255, 255, 255, 0.05), transparent 60%);
+      z-index: 0;
+      animation: moveBackground 60s linear infinite;
+    }
+
+    body::after {
+      top: auto;
+      bottom: -20%;
+      left: auto;
+      right: -10%;
+      background:
+        radial-gradient(circle at 30% 70%, rgba(255, 255, 255, 0.04), transparent 60%),
+        radial-gradient(circle at 70% 30%, rgba(255, 255, 255, 0.06), transparent 65%);
+      animation-direction: reverse;
+    }
+
+    @keyframes moveBackground {
+      0% {
+        transform: translate(0, 0);
+      }
+      100% {
+        transform: translate(-10%, 10%);
+      }
     }
 
     header {
-      background: #111;
-      color: white;
-      padding: 80px 20px;
+      background: transparent;
+      padding: 80px 20px 40px;
       text-align: center;
+      position: relative;
+      z-index: 10;
     }
 
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
+      color: #a6e3e9;
+      text-shadow: 0 0 8px #00bfff;
+      margin-bottom: 10px;
     }
 
     header p {
       font-size: 1.2rem;
-      max-width: 600px;
+      max-width: 700px;
       margin: 10px auto;
+      color: #cde7f0;
+      line-height: 1.5;
     }
 
     header p.university {
       margin-top: 15px;
       font-style: italic;
-      color: #00bfff;
+      color: #7ee8fa;
+      font-weight: 600;
     }
 
     section {
-      max-width: 1000px;
+      max-width: 900px;
       margin: 50px auto;
       padding: 20px;
+      position: relative;
+      z-index: 10;
     }
 
     .project {
@@ -46,6 +94,19 @@
       flex-wrap: wrap;
       margin-bottom: 60px;
       align-items: center;
+      background: rgba(255 255 255 / 0.1);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow:
+        0 0 15px rgba(0, 191, 255, 0.2);
+      backdrop-filter: blur(6px);
+      transition: background 0.3s ease;
+    }
+
+    .project:hover {
+      background: rgba(255 255 255 / 0.15);
+      box-shadow:
+        0 0 30px rgba(0, 191, 255, 0.4);
     }
 
     .project img {
@@ -53,24 +114,26 @@
       max-width: 400px;
       border-radius: 8px;
       margin: 10px;
-      box-shadow:
-        0 8px 15px rgba(0,0,0,0.15);
       transition: transform 0.5s ease, box-shadow 0.5s ease;
       transform-style: preserve-3d;
       cursor: default;
+      box-shadow:
+        0 8px 20px rgba(0,0,0,0.3);
+      background: transparent;
     }
 
     /* 3D hover effect on images */
     .project img:hover {
       transform: rotateY(15deg) rotateX(8deg) translateZ(20px);
       box-shadow:
-        0 12px 25px rgba(0,0,0,0.3);
+        0 15px 40px rgba(0,191,255,0.6);
     }
 
     .project .text {
       flex: 1;
       padding: 20px;
       min-width: 280px;
+      color: #d4f1f9;
     }
 
     .left .text {
@@ -103,22 +166,26 @@
       min-width: 120px;
       border-radius: 10px;
       box-shadow:
-        0 8px 15px rgba(0,0,0,0.15);
+        0 10px 25px rgba(0,0,0,0.35);
       transition: transform 0.5s ease, box-shadow 0.5s ease;
       transform-style: preserve-3d;
       cursor: default;
+      background: transparent;
     }
 
     .screenshot-gallery img:hover {
-      transform: rotateY(15deg) rotateX(8deg) translateZ(20px);
+      transform: rotateY(15deg) rotateX(8deg) translateZ(25px);
       box-shadow:
-        0 12px 25px rgba(0,0,0,0.3);
+        0 18px 50px rgba(0,191,255,0.8);
     }
 
-    /* Freelance rating section as project with stars floating */
+    /* Freelance rating section with floating stars */
     .freelance-rating.project {
       align-items: center;
       gap: 40px;
+      background: transparent !important;
+      box-shadow: none !important;
+      padding: 0 !important;
     }
 
     .freelance-rating img {
@@ -128,19 +195,18 @@
       border-radius: 0;
       background: transparent;
       box-shadow:
-        0 0 40px rgba(0, 191, 255, 0.7);
+        0 0 40px rgba(0, 191, 255, 0.9);
       transition: transform 0.5s ease, box-shadow 0.5s ease;
       transform-style: preserve-3d;
       cursor: default;
-      /* Make the stars "stand" out, no card */
-      filter: drop-shadow(0 5px 7px rgba(0,0,0,0.4));
+      filter: drop-shadow(0 5px 8px rgba(0,0,0,0.45));
     }
 
     .freelance-rating img:hover {
       transform: rotateY(15deg) rotateX(8deg) translateZ(30px);
       box-shadow:
-        0 0 60px rgba(0, 191, 255, 0.9);
-      filter: drop-shadow(0 8px 12px rgba(0,0,0,0.5));
+        0 0 70px rgba(0, 191, 255, 1);
+      filter: drop-shadow(0 8px 12px rgba(0,0,0,0.6));
     }
 
     @media (max-width: 768px) {
@@ -167,6 +233,25 @@
         width: 80%;
         min-width: auto;
       }
+
+      .freelance-rating img {
+        margin: 20px auto !important;
+      }
+    }
+
+    .archive {
+      max-width: 900px;
+      margin: 40px auto 80px;
+      padding: 20px;
+      color: #c1e4f6;
+      position: relative;
+      z-index: 10;
+    }
+
+    .archive h2 {
+      color: #00bfff;
+      margin-bottom: 15px;
+      text-shadow: 0 0 8px #00bfffaa;
     }
 
     .archive ul {
@@ -175,17 +260,22 @@
     }
 
     .archive li {
-      margin: 10px 0;
-      border-left: 4px solid #007acc;
-      padding-left: 10px;
+      margin: 12px 0;
+      border-left: 4px solid #00bfff;
+      padding-left: 12px;
+      font-weight: 600;
+      font-size: 1.05rem;
+      line-height: 1.3;
     }
 
     footer {
       background: #111;
-      color: white;
+      color: #89cffa;
       text-align: center;
       padding: 30px 20px;
       margin-top: 50px;
+      position: relative;
+      z-index: 10;
     }
 
     footer a {
@@ -193,12 +283,14 @@
     }
 
     a {
-      color: #007acc;
+      color: #55c8ff;
       text-decoration: none;
+      transition: color 0.3s ease;
     }
 
     a:hover {
       text-decoration: underline;
+      color: #a0eaff;
     }
   </style>
 </head>
@@ -234,10 +326,10 @@
     </div>
   </section>
 
-  <!-- Freelance rating with stars floating on left -->
-  <section class="project freelance-rating left">
+  <!-- Freelance rating with floating stars on left -->
+  <section class="project freelance-rating left" style="background:none; box-shadow:none; padding:0;">
     <img src="stars.png" alt="5 Stars Rating" />
-    <div class="text">
+    <div class="text" style="color:#c1e4f6;">
       <h2>🌟 Freelance Experience</h2>
       <p>I have a 5-star rating on Mostaql.com as a freelance web and graphic designer. Experienced in building panels using store makers and WordPress.</p>
       <a href="https://mostaql.com/YOUR_PROFILE" target="_blank" rel="noopener">View My Freelance Portfolio →</a>
