--- a/index.html
+++ b/index.html
@@ -357,8 +357,9 @@
     <div><strong>Sohyb</strong></div>
     <div>
       <a href="#projects">Projects</a>
-      <a href="#archive">Archive</a>
+      <a href="#archive">Highlights</a>
       <a href="#scroll-archive">Certificates</a>
+      <a href="#reviews">Reviews</a>
     </div>
   </nav>
 
@@ -373,6 +374,18 @@
 
   <section id="projects">
     <div class="project left">
+      <div class="project right">
+    <img src="cp_logo.png" alt="CP Logo" />
+    <div class="text">
+      <h2>💻 Competitive Programming</h2>
+      <ul>
+        <li>Honorable Mentioned ECPC Teens</li>
+        <li>Qualified 27th Onsite ECPC Quals 2024</li>
+        <li>EOI Junior Division 2021</li>
+        <li>IIOT Egyptian Onsite Qualifier (Port Said)</li>
+      </ul>
+    </div>
+  </div>
       <img src="https://via.placeholder.com/400x250.png?text=Transport+Map" alt="Transport Map" />
       <div class="text">
         <h2>🚍 Transport Map of Egypt</h2>
@@ -409,31 +422,37 @@
     </ul>
   </section>
 
-  <section class="scroll-archive" id="scroll-archive">
-    <h2>📂 Certificates & Competitions</h2>
-    <div class="scroll-container">
-      <button class="scroll-btn left" onclick="scrollCards(-1)">&#8678;</button>
-      <div class="card-wrapper" id="cardWrapper">
-        <div class="cert-card">
-          <img src="ecpc.png" alt="ECPC Certificate">
-          <p><strong>ECPC Teens</strong><br>2x Honorable Mentions<br>38th Onsite</p>
-        </div>
-        <div class="cert-card">
-          <img src="eoi.png" alt="EOI Certificate">
-          <p><strong>EOI Junior</strong><br>Egypt Olympiad in Informatics 2021</p>
-        </div>
-        <div class="cert-card">
-          <img src="iiot.png" alt="IIOT Certificate">
-          <p><strong>IIOT Port Said</strong><br>Qualified in Egyptian IIOT track</p>
-        </div>
+  <section class="scroll-archive" id="reviews">
+  <h2>💬 Customer Reviews</h2>
+  <div class="scroll-container">
+    <button class="scroll-btn left" onclick="scrollCards(-1)">&#8678;</button>
+    <div class="card-wrapper" id="cardWrapper">
+      <div class="cert-card">
+        <img src="review1.png" alt="Review 1">
+        <p>"Excellent design! Fast delivery." — Client A</p>
       </div>
-      <button class="scroll-btn right" onclick="scrollCards(1)">&#8680;</button>
+      <div class="cert-card">
+        <img src="review2.png" alt="Review 2">
+        <p>"Professional and responsive." — Client B</p>
+      </div>
+      <div class="cert-card">
+        <img src="review3.png" alt="Review 3">
+        <p>"High-quality work, highly recommended." — Client C</p>
+      </div>
     </div>
-  </section>
+    <button class="scroll-btn right" onclick="scrollCards(1)">&#8680;</button>
+  </div>
+</section>
+
 
   <footer id="contact">
-    <p>Contact: <a href="mailto:sohyb@example.com">sohyb@example.com</a></p>
-    <p>© 2025 Sohyb</p>
+  <p>Contact me:</p>
+  <p>
+    <a href="mailto:sohyb@example.com">Email</a> |
+    <a href="https://github.com/YOUR_USERNAME" target="_blank" rel="noopener">GitHub</a> |
+    <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener">LinkedIn</a>
+  </p>
+  <p>© 2025 Sohyb</p>
   </footer>
 
   <script>
