--- a/index.html
+++ b/index.html
@@ -343,9 +343,74 @@
       .trip-planner-screenshots { width: 90vw; height: auto; }
       .trip-planner-screenshots img { position: relative; margin: 10px auto; animation: none; }
     }
+
+    .shooting-stars {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 0;
+  overflow: hidden;
+  background: transparent;
+}
+
+.shooting-stars::before,
+.shooting-stars::after {
+  content: '';
+  position: absolute;
+  top: -10%;
+  width: 3px;
+  height: 80px;
+  background: linear-gradient(45deg, white, rgba(255,255,255,0));
+  filter: drop-shadow(0 0 6px white);
+  opacity: 0.6;
+  animation: shoot 3s linear infinite;
+  border-radius: 50%;
+}
+
+.shooting-stars::after {
+  left: 25%;
+  animation-delay: 1.5s;
+}
+
+.shooting-stars::before {
+  left: 70%;
+  animation-delay: 0s;
+}
+
+@keyframes shoot {
+  0% {
+    transform: translateX(0) translateY(0) rotate(45deg);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(120vw) translateY(120vh) rotate(45deg);
+    opacity: 0;
+  }
+}
+
+
+    /* Universal text hover animation */
+body * {
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+body *:hover {
+  transform: scale(1.05);
+  color: #00bfff !important; /* Bright blue glow color */
+  cursor: pointer;
+  text-shadow: 0 0 8px #00bfff;
+}
+
   </style>
 </head>
 <body>
+  <div class="shooting-stars"></div>
   <div class="shape one"></div>
   <div class="shape two"></div>
   <div class="shape three"></div>
