--- a/index.html
+++ b/index.html
@@ -494,15 +494,15 @@ body *:hover {
     <div class="card-wrapper" id="cardWrapper">
       <div class="cert-card">
         <img src="review1.png" alt="Review 1">
-        <p>"Excellent design! Fast delivery." — Client A</p>
+        <p>"Thank you very much for your creativity and precision. I recommend that everyone deal with him. He is also known for his patience. Thank you very much." — Client A</p>
       </div>
       <div class="cert-card">
         <img src="review2.png" alt="Review 2">
-        <p>"Professional and responsive." — Client B</p>
+        <p>"Very cooperative even in modifications I recommend him" — Client B</p>
       </div>
       <div class="cert-card">
         <img src="review3.png" alt="Review 3">
-        <p>"High-quality work, highly recommended." — Client C</p>
+        <p>"Excellent, very patient, has high communication skills, quick to deliver work, and I recommend dealing with him" — Client C</p>
       </div>
     </div>
     <button class="scroll-btn right" onclick="scrollCards(1)">&#8680;</button>
