--- a/index.html
+++ b/index.html
@@ -348,12 +348,11 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   pointer-events: none;
   z-index: 0;
-  overflow: hidden;
-  background: transparent;
+  overflow: visible;
 }
 
 .shooting-stars::before,
@@ -363,37 +362,37 @@
   top: -10%;
   width: 3px;
   height: 80px;
-  background: linear-gradient(45deg, white, rgba(255,255,255,0));
+  background: linear-gradient(90deg, white 0%, rgba(255,255,255,0) 100%);
   filter: drop-shadow(0 0 6px white);
-  opacity: 0.6;
-  animation: shoot 3s linear infinite;
+  opacity: 0.7;
   border-radius: 50%;
-}
-
-.shooting-stars::after {
-  left: 25%;
-  animation-delay: 1.5s;
+  animation: shoot 3.5s linear infinite;
+  transform-origin: left center;
 }
 
 .shooting-stars::before {
-  left: 70%;
+  left: 20%;
   animation-delay: 0s;
+}
+
+.shooting-stars::after {
+  left: 60%;
+  animation-delay: 1.7s;
 }
 
 @keyframes shoot {
   0% {
-    transform: translateX(0) translateY(0) rotate(45deg);
+    transform: translate(0, 0) rotate(45deg);
     opacity: 0;
   }
   10% {
     opacity: 1;
   }
   100% {
-    transform: translateX(120vw) translateY(120vh) rotate(45deg);
+    transform: translate(120vw, 120vh) rotate(45deg);
     opacity: 0;
   }
 }
-
 
     /* Universal text hover animation */
 body * {
@@ -453,15 +452,16 @@ body *:hover {
     <div class="project left">
       <img src="https://via.placeholder.com/400x250.png?text=Transport+Map" alt="Transport Map" />
       <div class="text">
-        <h2>🚍 Transport Map of Egypt</h2>
-        <p>Interactive map using Leaflet.js showing public/private transport. Data parsed from Google Maps JSON.</p>
-      </div>
+  <h2>🚍 Transport Map of Egypt</h2>
+  <p>Interactive map using Leaflet.js showing public/private transport. Data parsed from Google Maps JSON.</p>
+  <p><a href="https://your-transport-map-link.example" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">Visit the website</a></p>
+</div>
     </div>
-    <div class="project right">
-      <div class="text">
-        <h2>🧳 Trip Planner Web App</h2>
-        <p>Budgeting, planning, and visualization in one modern ReactJS app. With floating UI cards and charting features.</p>
-      </div>
+    <div class="text">
+  <h2>🧳 Trip Planner Web App</h2>
+  <p>Budgeting, planning, and visualization in one modern ReactJS app. With floating UI cards and charting features.</p>
+  <p><a href="https://github.com/YOUR_GITHUB_USERNAME/trip-planner" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View on GitHub</a></p>
+</div>
       <div class="trip-planner-screenshots" id="tripScreens">
         <img src="MainMenu.png" />
         <img src="Charts.png" />
@@ -471,9 +471,10 @@ body *:hover {
     <div class="project left freelance">
       <img src="stars.png" alt="5 Stars Rating" />
       <div class="text">
-        <h2>🌟 Freelance Experience</h2>
-        <p>5-star rated Mostaql freelancer. Built responsive stores and UI panels using WordPress & custom design tools.</p>
-      </div>
+  <h2>🌟 Freelance Experience</h2>
+  <p>5-star rated Mostaql freelancer with multiple successful projects. Skilled in WordPress, store builders, and custom UI panels.</p>
+  <p><a href="https://mostaql.com/profile/YOUR_PROFILE" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View my Mostaql profile</a></p>
+</div>
     </div>
   </section>
 
