--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@ body *:hover {
   <p>Budgeting, planning, and visualization in one modern ReactJS app. With floating UI cards and charting features.</p>
   <p><a href="https://github.com/YOUR_GITHUB_USERNAME/trip-planner" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View on GitHub</a></p>
 </div>
+    </div>
       <div class="trip-planner-screenshots" id="tripScreens">
         <img src="MainMenu.png" />
         <img src="Charts.png" />
